<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_aplicativo"
    tools:context=".CadastroActivity">

    <TextView
        android:id="@+id/texto_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastre-se"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/form_cadastro_view"
        style="@style/container_components_cadastro_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texto_cadastro"
        />

    <EditText
        android:id="@+id/nome_cadastro"
        style="@style/edit_text_style"
        android:inputType="text"
        android:maxLength="27"
        android:hint="@string/digite_seu_nome" android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/form_cadastro_view"
        app:layout_constraintEnd_toEndOf="@id/form_cadastro_view"
        app:layout_constraintTop_toTopOf="@id/form_cadastro_view"
        />

    <EditText
        android:id="@+id/email_cadastro"
        style="@style/edit_text_style"
        android:inputType="textEmailAddress"
        android:maxLength="27"
        android:hint="@string/digite_seu_email" android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/form_cadastro_view"
        app:layout_constraintEnd_toEndOf="@id/form_cadastro_view"
        app:layout_constraintTop_toBottomOf="@id/nome_cadastro"
        />

    <EditText
        android:id="@+id/celular_cadastro"
        style="@style/edit_text_style"
        android:inputType="number"
        android:hint="@string/digite_seu_celular" android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/form_cadastro_view"
        app:layout_constraintEnd_toEndOf="@id/form_cadastro_view"
        app:layout_constraintTop_toBottomOf="@id/email_cadastro"
        />

    <EditText
        android:id="@+id/cpf_cadastro"
        style="@style/edit_text_style"
        android:inputType="number"
        android:hint="@string/digite_seu_cpf" android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/form_cadastro_view"
        app:layout_constraintEnd_toEndOf="@id/form_cadastro_view"
        app:layout_constraintTop_toBottomOf="@id/celular_cadastro"
        />

    <EditText
        android:id="@+id/senha_cadastro"
        style="@style/edit_text_style"
        android:inputType="numberPassword"
        android:hint="@string/digite_sua_senha" android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/form_cadastro_view"
        app:layout_constraintEnd_toEndOf="@id/form_cadastro_view"
        app:layout_constraintTop_toBottomOf="@id/cpf_cadastro"
        />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botao_cadastro"
        style="@style/button_cadastrar_style"
        app:layout_constraintStart_toStartOf="@id/form_cadastro_view"
        app:layout_constraintTop_toBottomOf="@id/form_cadastro_view"
        android:layout_marginTop="25dp"
        android:text="@string/botao_cadastrar"/>

</androidx.constraintlayout.widget.ConstraintLayout>